--- a/TechSupport/TechSupport.csproj
+++ b/TechSupport/TechSupport.csproj
@@ -65,6 +65,12 @@
     <Compile Include="UserControls\LoadIncidentUserControl.Designer.cs">
       <DependentUpon>LoadIncidentUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\searchIncidentUserControl1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\searchIncidentUserControl1.Designer.cs">
+      <DependentUpon>searchIncidentUserControl1.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\AddIncidentDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\LoadIncidentUserControl.resx">
       <DependentUpon>LoadIncidentUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\searchIncidentUserControl1.resx">
+      <DependentUpon>searchIncidentUserControl1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\AddIncidentDialog.resx">
       <DependentUpon>AddIncidentDialog.cs</DependentUpon>
