Started a form 1 to test building the display open incidents by technician

--- a/TechSupport/TechSupport.csproj
+++ b/TechSupport/TechSupport.csproj
@@ -71,6 +71,12 @@
     <Compile Include="UserControls\updateIncidentUserControl.Designer.cs">
       <DependentUpon>updateIncidentUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,12 +107,16 @@
     <EmbeddedResource Include="UserControls\updateIncidentUserControl.resx">
       <DependentUpon>updateIncidentUserControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainDashboard.resx">
       <DependentUpon>MainDashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\TechSupport.Model.Incident.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
