--- a/TechSupport/TechSupport.csproj
+++ b/TechSupport/TechSupport.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DAL\IncidentDBConnection.cs" />
     <Compile Include="DAL\IncidentDBDAL.cs" />
     <Compile Include="Model\Incident.cs" />
+    <Compile Include="Model\Technician.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\addIncidentUserControl.cs">
       <SubType>UserControl</SubType>
@@ -116,7 +117,6 @@
     <EmbeddedResource Include="View\MainDashboard.resx">
       <DependentUpon>MainDashboard.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Properties\DataSources\TechSupport.Model.Incident.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
